[package]
name = "race_result_analysis"
version = "0.11.31"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
garmin_lib = {path="../garmin_lib"}
tokio-postgres = {version = "0.7", features = ["with-chrono-0_4"]}
postgres-types = "0.2"
bytes = "1.0"
anyhow = "1.0"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.3-2", features=["deadpool"]}
chrono = "0.4"
tokio = {version="1.9", features=["full"]}
ndarray = "0.15"
parking_lot = "0.11"
lazy_static = "1.4"
itertools = "0.10"
maplit = "1.0"
smallvec = "1.6"
stack-string = { version="0.2", features=["postgres_types"] }
rusfun = { git = "https://github.com/ddboline/rusfun.git", tag="0.3.4" }
