[package]
name = "race_result_analysis"
version = "0.13.18"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
garmin_lib = {path="../garmin_lib"}
tokio-postgres = {version = "0.7", features = ["with-time-0_3", "with-uuid-1"]}
postgres-types = "0.2"
bytes = "1.0"
anyhow = "1.0"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.4", features=["deadpool"]}
time = {version="0.3", features=["serde-human-readable", "macros", "formatting", "parsing"]}
time-tz = {version="2.0", features=["system"]}
tokio = {version="1.26", features=["full"]}
ndarray = "0.15"
log = "0.4"
parking_lot = "0.12"
lazy_static = "1.4"
itertools = "0.11"
smallvec = "1.6"
futures = "0.3"
stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", features=["postgres_types"], tag="0.9.1" }
rusfun = { git = "https://github.com/ddboline/rusfun.git" }
uuid = { version = "1.0", features = ["serde", "v4"] }
