[package]
name = "race_result_analysis"
version = "0.14.19"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "1.0"
futures = "0.3"
garmin_lib = {path="../garmin_lib"}
garmin_models = {path="../garmin_models"}
garmin_utils = {path="../garmin_utils"}
itertools = "0.13"
log = "0.4"
ndarray = "0.15"
parking_lot = "0.12"
postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.8", features=["deadpool"]}
rusfun = { git = "https://github.com/ddboline/rusfun.git" }
serde = {version="1.0", features=["derive"]}
smallvec = "1.6"
stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", features=["postgres_types"], tag="0.9.3" }
time = {version="0.3", features=["serde-human-readable", "macros", "formatting", "parsing"]}
time-tz = {version="2.0", features=["system"]}
tokio = {version="1.38", features=["rt", "macros", "rt-multi-thread"]}
tokio-postgres = {version = "0.7", features = ["with-time-0_3", "with-uuid-1"]}
uuid = { version = "1.0", features = ["serde", "v4"] }

[dev-dependencies]
once_cell = "1.0"
