[package]
name = "sheets_lib"
version = "0.8.8"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fitbit_lib = {path = "../fitbit_lib/"}
garmin_lib = {path = "../garmin_lib/"}
google-sheets4 = "1.0"
hyper = "0.10"
hyper-native-tls = "0.3.0"
yup-oauth2 = "1.0"
anyhow = "1.0"
chrono = "0.4"
log = "0.4"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
futures = "0.3"
