[package]
name = "strava_lib"
version = "0.13.14"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

[dependencies]
garmin_lib = { path = "../garmin_lib" }
tempfile = "3.1"
log = "0.4"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting", "parsing"]}
time-tz = {version="1.0", features=["system"]}
anyhow = "1.0"
thiserror = "1.0"
reqwest = {version="0.11", features=["cookies", "json", "rustls-tls", "stream", "multipart"], default_features=false}
lazy_static = "1.4"
tokio = {version="1.26", features=["full"]}
tokio-stream = "0.1"
base64 = "0.21"
rand = "0.8"
maplit = "1.0"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
uuid = "1.0"
postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.4", features=["deadpool"]}
rayon = "1.5"
futures = "0.3"
select = "0.6"
smallvec = "1.6"
crossbeam-utils = "0.8"
stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", features=["postgres_types"], tag="0.9.1" }
