[package]
name = "strava_lib"
version = "0.14.3"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

[dependencies]
garmin_lib = { path = "../garmin_lib" }
anyhow = "1.0"
base64 = "0.21"
crossbeam-utils = "0.8"
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
maplit = "1.0"
postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.5", features=["deadpool"]}
rand = "0.8"
rayon = "1.5"
reqwest = {version="0.11", features=["cookies", "json", "rustls-tls", "stream", "multipart"], default_features=false}
select = "0.6"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
smallvec = "1.6"
stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", features=["postgres_types"], tag="0.9.2" }
tempfile = "3.1"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting", "parsing"]}
time-tz = {version="2.0", features=["system"]}
thiserror = "1.0"
tokio = {version="1.32", features=["full"]}
tokio-stream = "0.1"
uuid = "1.0"
