[package]
name = "strava_lib"
version = "0.14.17"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
crossbeam-utils = "0.8"
futures = "0.3"
garmin_lib = { path = "../garmin_lib" }
garmin_models = {path="../garmin_models"}
garmin_utils = {path="../garmin_utils"}
log = "0.4"
maplit = "1.0"
once_cell = "1.0"
postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.7", features=["deadpool"]}
reqwest = {version="0.12", features=["cookies", "json", "rustls-tls", "stream", "multipart"], default_features=false}
select = "0.6"
serde = {version="1.0", features=["derive"]}
smallvec = "1.6"
stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", features=["postgres_types"], tag="0.9.3" }
tempfile = "3.1"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting", "parsing"]}
time-tz = {version="2.0", features=["system"]}
tokio = {version="1.37", features=["rt", "macros", "rt-multi-thread"]}
tokio-stream = "0.1"
uuid = "1.0"
